src/objects/StartUpPractice__c.object
<CustomObject>
    <description>Details: A start Up Practice is a privately-shared record related to an existing account.
Use Case: A dentist working for that account is investigating the possibilities to start up their own clinic (in confidence with DS Sales Reps)
TFUS-000003211</description>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dental Clinic</fullName>
                    <default>true</default>
                    <label>Dental Clinic</label>
                </value>
                <value>
                    <fullName>Dental Laboratory</fullName>
                </value>
                <value>
                    <fullName>Dental Support Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Practice (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Start Up Practices</relationshipLabel>
        <relationshipName>Start_Up_Practices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CancellationReasonDetails__c</fullName>
        <label>Cancellation Reason Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancellationReason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancellation of Start-Up Plans</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Start Up Practices</relationshipLabel>
        <relationshipName>Start_Up_Practices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <defaultValue>CASE($User.User_Country__c,
&quot;Australia&quot;,&quot;AU&quot;,
&quot;Austria&quot;,&quot;AT&quot;,
&quot;Belarus&quot;,&quot;BY&quot;,
&quot;Belgium&quot;,&quot;BE&quot;,
&quot;Brazil&quot;,&quot;BR&quot;,
&quot;Canada&quot;, &quot;CA&quot;,
&quot;Denmark&quot;,&quot;DK&quot;,
&quot;Finland&quot;,&quot;FI&quot;,
&quot;France&quot;,&quot;FR&quot;,
&quot;Germany&quot;,&quot;DE&quot;,
&quot;Holland&quot;,&quot;NL&quot;,
&quot;India&quot;,&quot;IN&quot;,
&quot;Italy&quot;,&quot;IT&quot;,
&quot;Kazakhstan&quot;,&quot;KZ&quot;,
&quot;Luxembourg&quot;,&quot;LU&quot;,
&quot;New Zealand&quot;,&quot;NZ&quot;,
&quot;Norway&quot;,&quot;NW&quot;,
&quot;Portugal&quot;,&quot;PT&quot;,
&quot;South Africa&quot;,&quot;ZA&quot;,
&quot;Spain&quot;,&quot;SP&quot;,
&quot;Sweden&quot;,&quot;SW&quot;,
&quot;Switzerland&quot;,&quot;CH&quot;,
&quot;UK&quot;, &quot;GB&quot;,
&quot;Ukraine&quot;, &quot;UA&quot;,
&quot;USA&quot;,&quot;US&quot;,
&quot;Japan&quot;,&quot;JP&quot;,
&quot;Turkey&quot;,&quot;R&quot;,
&quot;UAE&quot;,&quot;&quot;,
&quot;Vietnam&quot;,&quot;VN&quot;,
&quot;Thailand&quot;,&quot;TH&quot;,
&quot;Taiwan&quot;,&quot;TW&quot;,
&quot;South Korea&quot;,&quot;KR&quot;,
&quot;Slovakia&quot;,&quot;SK&quot;,
&quot;Singapore&quot;,&quot;SI&quot;,
&quot;Saudi Arabia&quot;,&quot;SA&quot;,
&quot;Indonesia&quot;,&quot;ID&quot;,
&quot;Hong Kong&quot;,&quot;HK&quot;,
&quot;China&quot;,&quot;CN&quot;,
&quot;Russia&quot;,&quot;RU&quot;,
&quot;Poland&quot;,&quot;PO&quot;,
&quot;Philippines&quot;,&quot;PH&quot;,
&quot;HQ: SE&quot;)</defaultValue>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_2_digit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FinanceCompany__c</fullName>
        <label>Finance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FitOutCompany__c</fullName>
        <label>Fit-Out Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentifiedNeedsAndProducts__c</fullName>
        <label>Identified Needs &amp; Products</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Direct (from the customer)
Finance Company (for those start-up clinics the doctors work together with big Finance companies), 
Fit-out Company/Design Agency/... (for those start up clinics the doctors work together with big Fit-out/Design companies), 
Referral (from other existing customers)</description>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Design Agency</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>DS Internal</fullName>
                </value>
                <value>
                    <fullName>Finance Company</fullName>
                </value>
                <value>
                    <fullName>Fit-out Company</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NDAAgreementSigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDA Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obstacles__c</fullName>
        <label>Obstacles</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OverallSalesBudget__c</fullName>
        <label>Overall Sales Budget (Amount)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlannedOpeningDate__c</fullName>
        <inlineHelpText>When is your business expected to open?</inlineHelpText>
        <label>Planned Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrivateEmail__c</fullName>
        <label>Private Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProductCategories__c</fullName>
        <label>Product Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Consumables</fullName>
                </value>
                <value>
                    <fullName>Digital Group</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Equipment &amp; Imaging</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Prosthetics</fullName>
                </value>
                <value>
                    <fullName>Root To Crown</fullName>
                </value>
                <value>
                    <fullName>Single Unit Crown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AccountType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crown &amp; Bridge Laboratory</fullName>
                </value>
                <value>
                    <fullName>Dental Association</fullName>
                </value>
                <value>
                    <fullName>Denture Laboratory</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Full Service Dental Laboratory</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>General Practice</fullName>
                </value>
                <value>
                    <fullName>Headquarter</fullName>
                </value>
                <value>
                    <fullName>Home Address</fullName>
                </value>
                <value>
                    <fullName>Hospital Laboratory</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Lab Group</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Mid Market Group</fullName>
                </value>
                <value>
                    <fullName>Multi-Dentist Clinic</fullName>
                </value>
                <value>
                    <fullName>Ortho (retainers &amp; appliances)</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Purchasing Group</fullName>
                </value>
                <value>
                    <fullName>Removable (full &amp; partial dentures)</fullName>
                </value>
                <value>
                    <fullName>Single Dentist Clinic</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Discussions</fullName>
                    <default>true</default>
                    <label>Initial Discussions</label>
                </value>
                <value>
                    <fullName>Identifying Needs</fullName>
                </value>
                <value>
                    <fullName>Pricing Discussions</fullName>
                </value>
                <value>
                    <fullName>Parked/On Hold</fullName>
                </value>
                <value>
                    <fullName>Practice Created</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TreatmentType__c</fullName>
        <label>Treatment Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>AccountType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bridge</fullName>
                </value>
                <value>
                    <fullName>Conservative dentistry</fullName>
                </value>
                <value>
                    <fullName>Crown</fullName>
                </value>
                <value>
                    <fullName>Dental Implants</fullName>
                </value>
                <value>
                    <fullName>Dental Radiology</fullName>
                </value>
                <value>
                    <fullName>Denture</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Esthetic</fullName>
                </value>
                <value>
                    <fullName>Implant Restorations</fullName>
                </value>
                <value>
                    <fullName>Implant Surgery</fullName>
                </value>
                <value>
                    <fullName>Implantology</fullName>
                </value>
                <value>
                    <fullName>Oral Maxillofacial Surgery</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Pediondontics/Pediatric Dentistry</fullName>
                </value>
                <value>
                    <fullName>Pedodontics</fullName>
                </value>
                <value>
                    <fullName>Periodontics</fullName>
                </value>
                <value>
                    <fullName>Preventive care</fullName>
                </value>
                <value>
                    <fullName>Preventive Care/ Prophylaxis</fullName>
                </value>
                <value>
                    <fullName>Prosthetics</fullName>
                </value>
                <value>
                    <fullName>Prosthodontics</fullName>
                </value>
                <value>
                    <fullName>Referral Clinic</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZipPostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Dentists__c</fullName>
        <label>Estimated # of Dentists</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_ProphylaxisChairs__c</fullName>
        <inlineHelpText># of chairs used by a Hygienist</inlineHelpText>
        <label>Estimated # of Prophylaxis Chairs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Technicians__c</fullName>
        <label>Estimated # of Technicians</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_TreatmentChairs__c</fullName>
        <inlineHelpText># of chairs equipped for a Dentist (for restorations, Implants etc)</inlineHelpText>
        <label>Estimated # of Treatment Chairs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Start Up Practice</label>
    <listViews>
        <fullName>All_Start_Up_Practices</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>CountryCode__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Start-Up Practices</label>
    </listViews>
    <nameField>
        <label>Start Up Practice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Start Up Practices</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_AccountRequiredIfPracticeCreated</fullName>
        <active>true</active>
        <description>You must enter an account to &quot;close&quot; a start-up practice and define it as &quot;Practice Created&quot;</description>
        <errorConditionFormula>AND(
TEXT(Status__c) = &apos;Practice Created&apos;,
ISBLANK(Account__c)
)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>You must link your Start-Up Practice to the right Account (&quot;New Practice&quot;), If you cannot find it when searching by the Practice Name, try the &quot;OneSF Id&quot;, or &quot;CIM360 Id&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_CancelationReason</fullName>
        <active>true</active>
        <description>Cancellation Reason is required if the status is Cancelled</description>
        <errorConditionFormula>AND(
 TEXT(Status__c) = &apos;Cancelled&apos;,
 ISBLANK(TEXT(CancellationReason__c))
)</errorConditionFormula>
        <errorDisplayField>CancellationReason__c</errorDisplayField>
        <errorMessage>Please choose a cancellation reason.</errorMessage>
    </validationRules>
</CustomObject>